# next-uv-monorepo

./: .gitignore  CLAUDE.md  README.md  pnpm-lock.yaml  pyproject.toml  ruff.toml  turbo.json
apps/api/: README.md  package.json  pyproject.toml
apps/api/src/api/: cli.py  main.py  models.py
apps/api/src/api/routers/: chat.py
apps/api/tests/: test_chat_router.py
apps/web/: README.md  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: theme-toggle.tsx
apps/web/components/chat/: chat-input.tsx  chat-interface.tsx  chat-message.tsx  client-only-chat.tsx  markdown-content.tsx  typing-indicator.tsx
apps/web/lib/: chat-api.ts
apps/web/styles/: highlight.css
